# open-geo-engine

./: .env.sample  .gitignore  .pre-commit-config.yaml  Brewfile  Dockerfile  LICENSE  README.md  README.rst  community-statement.md  makefile  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: task-issue-template.md  user-story-issue-template.md
.github/workflows/: ci.yml
examples/: Example_kepler_gl.ipynb
notebooks/: LinearModelUnicef_v2_Stacking.ipynb  display_ee_data.ipynb
open_geo_engine/: __main__.py  main.py
open_geo_engine/config/: model_settings.py
open_geo_engine/scripts/: join_pollution_satellite_data.py  predictions_to_geojson.py
open_geo_engine/src/: bootstrap.py  generate_building_centroids.py  get_google_streetview.py  load_ee_data.py  pollution_joiner.py  satellite_temporal_aggregator.py  train_model.py
open_geo_engine/utils/: utils.py
reinventing_catastrophe_modelling/: __main__.py  bootstrap.py  main.py
reinventing_catastrophe_modelling/cli/: load_ee_cli.py
reinventing_catastrophe_modelling/config/: model_settings.py
reinventing_catastrophe_modelling/src/: generate_building_centroids.py  get_google_streetview.py  load_ee_data.py
reinventing_catastrophe_modelling/utils/: utils.py
tests/: test__main__.py  test_generate_building_centroids.py  test_get_google_streetview.py  test_load_ee_data.py  test_open_geo_engine.py  test_reinventing_catastrophe_modelling.py  test_utils.py
tests/test_data/: streetview_links.txt
