[tool.poetry]
name = "open-geo-engine"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.4.3"
geemap = "^0.16.7"
geopandas = "^0.11.1"
click = "^8.1.3"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
appdirs = "^1.4.4"
earthengine-api = "^0.1.320"
osmnx = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
