[tool.poetry]
name = "open-geo-engine"
version = "0.1.2"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
joblib = "^1.0.1"
libpysal = "^4.5.1"
geopandas = "^0.10"
esda = "^2.4.1"
click-config-file = "^0.6.0"
click-option-group = "^0.5.3"
hydra-core = "^1.1.1"
earthengine-api = "^0.1.280"
osmnx = "^1.1.1"
google = "^3.0.0"
google-streetview = "^1.2.9"
geemap = "^0.12.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.1.9"
mypy = "^0.910"
coverage = "^5.5"
pre-commit = "^2.14.0"
isort = "^5.9.3"
flake8 = "^4.0.1"
typing-extensions = "^4.0.1"
pydantic = "^1.8.2"
ipykernel = "^6.9.1"
pylama = "^7.7.1"
black = "^22.3.0"
setuptools = "^60.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
