[tool.poetry]
name = "open-geo-engine"
version = "0.1.3"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "1.9.1"
joblib = "^1.1.0"
libpysal = "^4.6.2"
geopandas = "^0.11.1"
esda = "^2.4.3"
click-config-file = "^0.6.0"
click-option-group = "^0.5.3"
earthengine-api = "^0.1.323"
setuptools = "^65.3.0"
osmnx = "^1.2.2"
google = "^3.0.0"
google-streetview = "^1.2.9"
scikit-learn = "^1.1.2"
ipykernel = "^6.15.2"
geemap = "^0.16.9"
ipyleaflet = "^0.17.1"
gcloud = "^0.18.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
jupyterlab = "^3.4.6"
ipykernel = "^6.15.2"
mypy = "^0.971"
coverage = "^6.4.4"
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.8.0"
pylama = "^8.4.1"
bandit = "^1.7.4"
PyYAML = "^6.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
