[metadata]
name = reinventing_catastrophe_modelling
author = Christina Last
author_email = christina.last@outlook.com
description = Behold My Awesome Project!
long_description = README.rst
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

license = MIT
keywords =
    setup
    distutils

[pylama]
max-line-length = 100
exclude = .tox,.git,*/static/CACHE/*,docs
skip = */.tox/*,*/.venv/*,*/static/CACHE/*,docs,manage.py,wsgi.py,*/settings/*,/.site-packages/

# https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
[pylama:pycodestyle]
ignore = W504,E133,W605,D203,D212,D213,D404,W605,E203,E266,E501,W503,F403,F401,E402


[files]
packages = reinventing_catastrophe_modelling


[mypy]
ignore_missing_imports=True
no_implicit_optional=True
check_untyped_defs=True
strict_equality=True
warn_redundant_casts = True
warn_unused_ignores = True

[coverage:run]
include = ./
omit = *tests*
branch = True

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 20
sort = Cover
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[coverage:html]
directory = coverage_html_report

[isort]
multi_line_output = 3
include_trailing_comma = True
combine_as_imports = True
line_length = 100
skip_glob = env
known_third_party =catboost,click,click_config_file,click_option_group,cloudpickle,dateutil,django,esda,geopandas,joblib,lib_db,libpysal,loguru,,numpy,pandas,pkg_resources,pydantic,pytest,sentry_sdk,setuptools,sklearn,tqdm,yaml
skip=setup.py
